--- a/package.json
+++ b/package.json
@@ -1,46 +1,63 @@
 {
-  "name": "@org/better-auth-effect",
-  "version": "0.0.0",
+  "name": "@artimath/better-auth-effect",
+  "version": "0.1.0",
   "type": "module",
-  "license": "MIT",
-  "description": "Effect layer for Better Auth with Kysely/Postgres",
+  "license": "Apache-2.0",
+  "description": "Effect.ts integration for Better Auth with Kysely/Postgres support",
+  "author": "Ryan Hunter <ryan@ryanhunter.io>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/artimath/better-auth-effect.git"
+  },
+  "homepage": "https://github.com/artimath/better-auth-effect#readme",
+  "bugs": {
+    "url": "https://github.com/artimath/better-auth-effect/issues"
+  },
+  "keywords": [
+    "effect",
+    "better-auth",
+    "kysely",
+    "postgres",
+    "authentication",
+    "layer"
+  ],
   "publishConfig": {
     "access": "public"
   },
+  "main": "./build/index.js",
+  "types": "./build/index.d.ts",
   "exports": {
-    ".": "./src/index.ts",
-    "./package.json": "./package.json",
-    "./*": "./src/*.ts"
+    ".": {
+      "import": "./build/index.js",
+      "types": "./build/index.d.ts"
+    },
+    "./package.json": "./package.json"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/lucas-barake/rpc-tutorial.git",
-    "directory": "packages/better-auth-effect"
-  },
+  "files": [
+    "build",
+    "src",
+    "LICENSE",
+    "README.md"
+  ],
   "scripts": {
     "build": "tsc -b tsconfig.build.json",
     "check": "tsc -b tsconfig.json",
-    "migrate": "dotenv -e ../../.env tsx ./scripts/migrate.ts"
+    "clean": "rm -rf build .tsbuildinfo",
+    "prepublishOnly": "pnpm clean && pnpm build"
   },
   "dependencies": {
     "better-auth": "^1.3.24",
     "kysely": "^0.27.3",
-    "pg": "8.13.1",
-    "effect": "*"
+    "pg": "^8.13.1"
   },
-  "effect": {
-    "generateExports": {
-      "include": [
-        "**/*.ts"
-      ]
-    },
-    "generateIndex": {
-      "include": [
-        "**/*.ts"
-      ]
-    }
+  "peerDependencies": {
+    "effect": "^3.18.0",
+    "@effect/platform": "^0.92.0"
   },
   "devDependencies": {
-    "@types/pg": "^8.11.11"
+    "@types/pg": "^8.11.11",
+    "effect": "^3.18.0",
+    "@effect/platform": "^0.92.0",
+    "typescript": "^5.6.0"
   }
 }
