--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,14 +1,9 @@
 {
-  "extends": "./tsconfig.src.json",
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "types": ["node",],
-    "tsBuildInfoFile": ".tsbuildinfo/build.tsbuildinfo",
-    "outDir": "build/esm",
-    "declarationDir": "build/dts",
-    "stripInternal": true,
-    "composite": true,
-    "declaration": true,
-    "sourceMap": true
+    "outDir": "./build",
+    "rootDir": "./src"
   },
-  "include": ["src"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "test", "**/*.test.ts"]
 }
