--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,23 @@
 {
-  "extends": "../../tsconfig.base.json",
-  "include": [],
-  "references": [{ "path": "tsconfig.src.json" }, { "path": "tsconfig.test.json" }]
+  "compilerOptions": {
+    "target": "ES2022",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "lib": ["ES2022", "DOM"],
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "composite": true,
+    "incremental": true,
+    "downlevelIteration": true,
+    "outDir": "./build",
+    "rootDir": "./src"
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "build", "test"]
 }
